--- a/build.gradle
+++ b/build.gradle
@@ -7,14 +7,13 @@ repositories {
 }
 
 dependencies {
-    testImplementation (
-            "com.codeborne:selenide:5.25.0",
-            "org.junit.jupiter:junit-jupiter-api:5.8.0")
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.0"
+    testImplementation('org.junit.jupiter:junit-jupiter:5.6.0')
+    implementation('com.codeborne:selenide:6.0.0')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.1')
+    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.1')
 }
 
 test {
     useJUnitPlatform()
-
 
 }
