--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ compileTestJava{
 }
 dependencies {
     implementation('com.codeborne:selenide:6.0.3')
-    testRuntimeOnly("org.slf4j:slf4j-simpl:1.7.32")
+    testRuntimeOnly("org.slf4j:slf4j-simple:1.7.32")
     testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.1')
 }
