--- a/build.gradle
+++ b/build.gradle
@@ -5,16 +5,14 @@ plugins {
 repositories {
     mavenCentral()
 }
-
-compileTestJava{
-    options.encoding = 'UTF-8'
-}
 dependencies {
-    implementation('com.codeborne:selenide:6.0.3')
-    testRuntimeOnly("org.slf4j:slf4j-simple:1.7.32")
-    testImplementation('org.junit.jupiter:junit-jupiter:5.8.1')
-    testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine:5.8.1')
+    testImplementation(
+            "com.codeborn:selenide:5.25.0",
+            "org.junit.jupiter:junit-jupiter-api:5.8.1")
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.1"
+
 }
+
 
 test {
     useJUnitPlatform()
