--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 dependencies {
     testImplementation(
-            "com.codeborn:selenide:5.25.0",
+            "com.codeborne:selenide:5.25.0",
             "org.junit.jupiter:junit-jupiter-api:5.8.1")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.1"
 }
